# study_flink

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  produtor_compras.py  produtor_usuario.py  produtor_usuarios.py  pyproject.toml
learning/: glossary.md  readme.md
learning/course/: readme.md
learning/sql-client/: readme.md
learning/video-2/: readme.md
