[tool.poetry]
name = "study-flink"
version = "0.1.0"
description = ""
authors = ["fabio.kfouri <fabio.kfouri@ubirata.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.5.0"
faker = "^26.2.0"
apache-flink = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
